--- a/heavycenter/src/main/res/layout/item_main_order_doing.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_doing.xml
@@ -130,11 +130,12 @@
                                 android:text="C30"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"/>
-                        <View
-                                android:layout_weight="1"
-                                android:layout_width="0dp"
-                                android:layout_height="1dp"/>
-                        <TextView
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:layout_alignParentRight="true"
                                 android:paddingLeft="5dp"
                                 android:paddingRight="5dp"
                                 android:id="@+id/tv_carno"
@@ -144,8 +145,9 @@
                                 android:textColor="@color/color_yell_blue"
                                 android:textSize="12sp"
                                 android:text="沪A2345"
-                                android:layout_width="60dp"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"/>
+                        </RelativeLayout>
                     </LinearLayout>
 
 
