--- a/heavycenter/src/main/res/layout/frag_main_order_begin.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order_begin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:SmartRefreshLayout="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="frag_main_order_begin"
@@ -13,6 +14,8 @@
         >
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/refresh"
+            app:srlEnableOverScrollBounce="false"
+            app:srlEnableAutoLoadmore="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <android.support.v7.widget.RecyclerView
