--- a/heavycenter/src/main/res/layout/frag_main_trans.xml
+++ b/heavycenter/src/main/res/layout/frag_main_trans.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:style_common="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="frag_main_trans"
@@ -13,10 +13,10 @@
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
             android:id="@+id/title"
-            style_common:iv_left ="@drawable/icon_hv_person"
-            style_common:txt_mid ="运输单"
-            style_common:iv_right2 ="@drawable/drawable_hv_sure_search"
-            style_common:iv_right ="@drawable/icon_hv_scan"
+            app:iv_left ="@drawable/icon_hv_person"
+            app:txt_mid ="运输单"
+            app:iv_right2 ="@drawable/drawable_hv_sure_search"
+            app:iv_right ="@drawable/icon_hv_scan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <RelativeLayout
@@ -28,6 +28,8 @@
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/refresh"
+            app:srlEnableOverScrollBounce="false"
+            app:srlEnableAutoLoadmore="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
