--- a/heavycenter/src/main/res/layout/item_main_order_detail_begin.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_detail_begin.xml
@@ -3,7 +3,7 @@
 
     <data>
         <variable
-                name="item_main_order_begin"
+                name="item_main_order_detail_begin"
                 type="com.siweisoft.heavycenter.data.netd.order.list.OrdersRes.ResultsBean" />
     </data>
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -11,8 +11,6 @@
         xmlns:style_common="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_hv_sel_dark_light"
-        android:foreground="?android:attr/selectableItemBackground"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="15dp"
@@ -28,7 +26,7 @@
             android:singleLine="true"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_title_txtsize"
-            android:text="@{item_main_order_begin.productName}"
+            android:text="@{item_main_order_detail_begin.productName}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -40,7 +38,7 @@
             android:layout_marginLeft="10dp"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_title_txtsize"
-            android:text="@{item_main_order_begin.specification}"
+            android:text="@{item_main_order_detail_begin.specification}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
@@ -51,7 +49,7 @@
             android:singleLine="true"
             android:textColor="@color/color_yell_blue"
             android:textSize="12sp"
-            android:text='@{"计划: "+item_main_order_begin.planNumber}'
+            android:text='@{"计划: "+item_main_order_detail_begin.planNumber}'
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -81,7 +79,7 @@
             android:layout_marginLeft="8dp"
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_recylce_item_subtitle_txtsize"
-            android:text="@{item_main_order_begin.shdwName}"
+            android:text="@{item_main_order_detail_begin.shdwName}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -99,62 +97,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <com.siweisoft.heavycenter.module.view.text.BgTextView
-            android:layout_marginTop="10dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/bt_sure"
-            android:paddingTop="3dp"
-            android:paddingBottom="3dp"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:singleLine="true"
-            android:layout_marginLeft="10dp"
-            android:textSize="15sp"
-            android:visibility="visible"
-            style_common:color_one="@color/color_hv_yelll"
-            style_common:stroke="0dp"
-            style_common:color_stroke="@color/red"
-            style_common:corner="5dp"
-            style_common:color_txt="@color/white"
-            android:id="@+id/bt_reject"
-            style_common:color_two="@color/color_red_800"
-            style_common:stroke_two="2dp"
-            style_common:color_stroke_two="@color/color_hv_yelll"
-            style_common:corner_two="5dp"
-            style_common:color_txt_two="@color/white"
-            style_common:boo_one="false"
-            android:text="拒绝"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <com.siweisoft.heavycenter.module.view.text.BgTextView
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintRight_toLeftOf="@+id/bt_reject"
-            app:layout_constraintTop_toBottomOf="@+id/tv_type"
-            android:paddingTop="3dp"
-            android:paddingBottom="3dp"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:singleLine="true"
-            android:layout_marginLeft="10dp"
-            android:textSize="15sp"
-            android:visibility="visible"
-            style_common:color_one="@color/color_hv_yelll"
-            style_common:stroke="0dp"
-            style_common:color_stroke="@color/red"
-            style_common:corner="5dp"
-            style_common:color_txt="@color/white"
-            android:id="@+id/bt_sure"
-            style_common:color_two="@color/color_red_800"
-            style_common:stroke_two="2dp"
-            style_common:color_stroke_two="@color/color_hv_yelll"
-            style_common:corner_two="5dp"
-            style_common:color_txt_two="@color/white"
-            style_common:boo_one="false"
-            android:text="接受"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
 
 
