--- a/heavycenter/src/main/res/layout/item_main_order_detail_doing.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_detail_doing.xml
@@ -3,7 +3,7 @@
 
     <data>
         <variable
-            name="item_main_order_doing"
+            name="item_main_order_detail_doing"
             type="com.siweisoft.heavycenter.data.netd.order.list.OrdersRes.ResultsBean" />
     </data>
 
@@ -11,8 +11,6 @@
         android:id="@+id/ll_ingorder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_hv_sel_dark_light"
-        android:foreground="?android:attr/selectableItemBackground"
         android:paddingBottom="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
