--- a/heavycenter/src/main/res/layout/item_main_order_detail_done.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_detail_done.xml
@@ -3,14 +3,12 @@
 
     <data>
         <variable
-            name="item_main_order_done"
+            name="item_main_order_detail_done"
             type="com.siweisoft.heavycenter.data.netd.order.list.OrdersRes.ResultsBean" />
     </data>
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_hv_sel_dark_light"
-        android:foreground="?android:attr/selectableItemBackground"
         android:paddingLeft="10dp"
         android:paddingBottom="10dp"
         android:paddingRight="10dp"
